--- a/portfolio/framework/css/main.css
+++ b/portfolio/framework/css/main.css
@@ -3,6 +3,7 @@
     border: solid red 1px;
 }
 
+/* define how boxes are counted */
 * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -10,14 +11,16 @@
     box-sizing: border-box;
 }
 
+/*title styles */
 .title {
     text-align: right;
 }
-/* this not necessary if other col 6 img used */
+
 .title h1 {
         margin-top: 0;
 }
-/* this not necessary if other col 6 img used */
+
+/*grid layout below*/
 
 .grid {
     margin: auto;
@@ -31,10 +34,6 @@
     flex-wrap: wrap;
     justify-content: space-between;
     
-}
-
-.caption {
-    text-align: center;
 }
 
 .col-1 {
@@ -91,13 +90,18 @@
     max-height: 100%;
 }
 
+/*text styles */
 h1 {
     text-transform: uppercase;
     color: #747704;
 }
 
 h2 {
-    color: #BCBBBB;
+    color: #bcbbbb;
+}
+
+p {
+    color: #bcbbbb;
 }
 
 h3 {
@@ -105,6 +109,15 @@ h3 {
     color: #747704;
 }
 
+.caption {
+    text-align: center;
+}
+
+figure {
+    margin: inherit;
+}
+
+/* dividing line */
 hr {
     display: block;
     height: 1px;
